Bug 164901 - FILEOPEN inline frame:lost table, lost text
Summary: FILEOPEN inline frame:lost table, lost text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-01-28 20:07 UTC by Justin L
Modified: 2025-02-05 12:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-95557.docx: example document (33.76 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-01-28 20:07 UTC, Justin L
Details
forum-mso-de-95557.docx_mso.pdf: how it looks without formatting marks in Word 2019 (18.51 KB, application/pdf)
2025-01-28 20:09 UTC, Justin L
Details
forum-mso-de-95557_CR.PNG: screenshot when formatting marks are displayed (34.07 KB, image/png)
2025-01-28 20:16 UTC, Justin L
Details
ooo124265-1.docx: multipage table (at page 40) is missing (257.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-01-28 20:20 UTC, Justin L
Details
LO25.2.0.1 opening DOCX without (Left) and with (right) style separator (801.11 KB, image/png)
2025-01-29 00:49 UTC, Piotr Osada
Details
After commit f1bbce4068828f3d1240afd50b228d820c17e848 LO25.8.0.0.alpha0+ treats style separator as paragraph sign (329.38 KB, image/png)
2025-02-05 02:15 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-01-28 20:07:45 UTC
Created attachment 198813 [details]
forum-mso-de-95557.docx: example document

In this document, a bordered table contains a picture of a graph and another row with a caption.

In 25.2, the table is gone and part of the caption is missing - and it is left aligned to the page, instead of being positioned underneath the picture, starting with commit 56588663a0fddc005c12afaa7d3f8874d036875f
Author: László Németh on Fri Sep 13 09:02:08 2024 +0200
    tdf#131728 sw inline heading: fix DOCX paragraph layout interoperability

Steps to reproduce
1.) open forum-mso-de-95557.docx

Notice that there is no table, there are no borders, there doesn't appear to be any caption, and the text does not contain " Abbildung 1- Grund der antibiotischen Therapie Test 1-2-3"

Found by Collabora's mso-test
Comment 1 Justin L 2025-01-28 20:09:47 UTC
Created attachment 198814 [details]
forum-mso-de-95557.docx_mso.pdf: how it looks without formatting marks in Word 2019
Comment 2 Justin L 2025-01-28 20:16:51 UTC
Created attachment 198815 [details]
forum-mso-de-95557_CR.PNG: screenshot when formatting marks are displayed

This was a very interesting document. The point of the commit is to make it looks like this image - where the "caption" is all on one line. But this document only looks like that when formatting marks are turned on. (I made a PDF while the formatting marks were on, but it still turned out like comment 1.) I would assume that some "hidden" aspect is coming into play here.

Note that I only reference the initial commit. At least one other related commit has modified the layout. The caption itself was intact at comment 0's commit.
Comment 3 Justin L 2025-01-28 20:20:30 UTC
Created attachment 198816 [details]
ooo124265-1.docx: multipage table (at page 40) is missing

The same commit caused the loss of a table in this document also.
Comment 4 Piotr Osada 2025-01-29 00:49:45 UTC
Created attachment 198832 [details]
LO25.2.0.1 opening DOCX without (Left) and with (right) style separator

Confirm: tables and frames are lost.

Version: 25.2.0.1 (X86_64) / LibreOffice Community
Build ID: ddb2a7ea3a8857aae619555f1a8743e430e146c9
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded

There is also change that can be seen in the navigator. It looks like with commit 56588663a0fddc005c12afaa7d3f8874d036875f field is skipped, but there is a bookmark instead.
Comment 5 László Németh 2025-01-29 22:47:35 UTC
Proposed fix: https://gerrit.libreoffice.org/c/core/+/180925 (partial revert of 56588663a0fddc005c12afaa7d3f8874d036875f for floating tables).
Comment 6 Commit Notification 2025-01-30 11:59:19 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f1bbce4068828f3d1240afd50b228d820c17e848

tdf#164901 sw inline heading: fix lost floating tables

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 László Németh 2025-01-30 12:01:41 UTC
Fixed in master, started back-porting.

@Justin & Piotr: thanks for the detailed report and feedback!
Comment 8 Commit Notification 2025-02-04 15:45:45 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4d98e46b7b22f6b2f048273890410f0579fe052c

tdf#164901 sw inline heading: fix lost floating tables

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Piotr Osada 2025-02-05 02:15:58 UTC
Created attachment 198989 [details]
After commit f1bbce4068828f3d1240afd50b228d820c17e848 LO25.8.0.0.alpha0+ treats style separator as paragraph sign

Now, inline frame is not created in place of style separator (as before).

Verified with:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d60ea6596f7a394290f9a82ac5324e2e8307f5f9
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded

BTW, why toggling formatting marks (Ctrl+F10) differs with additional paragraph being displayed?

off -- single paragraph
on  -- two paragraphs
Comment 10 Justin L 2025-02-05 12:11:15 UTC
(In reply to Piotr Osada from comment #9)
> BTW, why toggling formatting marks (Ctrl+F10) differs with additional
> paragraph being displayed?
MS Word shows "hidden content" when formatting marks are displayed. (LO can do the same thing optionally. (Tools - Options - Writer - Formatting Aids - Display Formatting:Hidden Characters). IIUC, the Paragraph-mark is "hidden" and thus you only get one paragraph...