tdf#164901 sw inline heading: fix lost floating tables

Style separators inside floating tables resulted losing of
the floating tables. In this case, don't handle style separators,
as before commit 56588663a0fddc005c12afaa7d3f8874d036875f.

Regression since commit 56588663a0fddc005c12afaa7d3f8874d036875f
"tdf#131728 sw inline heading: fix DOCX paragraph layout interoperability".

Change-Id: I30b6683b2312636405960efc65b5af2b6b4dbfa3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180925
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins
(cherry picked from commit f1bbce4068828f3d1240afd50b228d820c17e848)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180941
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>